<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_hotizontal_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_hotizontal_margin">


    <!-- #1 slika jela -->
    <ImageView
        android:id="@+id/iv_image_jelo"
        android:layout_width="match_parent"
        android:layout_height="80sp" />


    <!-- #2 naziv jela -->
    <TextView
        android:id="@+id/tv_name_jelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:layout_below="@id/iv_image_jelo"/>


    <!-- #3 Rating Bar -->
    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:progressBackgroundTint="#44444444"
        android:progressTint="#ffd700"
        android:scaleX=".6"
        android:scaleY=".6"
        android:secondaryProgressTint="#000000"
        android:layout_below="@id/tv_name_jelo"/>


    <!-- #4 opis, kategorija, sastojci i kalorije jela -->
    <!-- opis -->
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2sp"
        android:text="@string/description"
        android:textSize="12sp"
        android:layout_below="@id/rb_rating"
        android:layout_centerHorizontal="true"/>

    <!-- opis opisa :) -->
    <TextView
        android:id="@+id/tv_destription_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:textSize="11sp"
        android:textStyle="italic"
        android:layout_below="@id/tv_description"
        android:layout_centerHorizontal="true"/>

    <!-- kategorija -->
    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2sp"
        android:text="@string/category"
        android:textSize="12sp"
        android:layout_below="@id/tv_destription_des"
        android:layout_centerHorizontal="true"/>

    <!-- spiner za kategoriju -->
    <Spinner
        android:id="@+id/sp_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_category" />


    <!-- sastojci -->
    <TextView
        android:id="@+id/tv_ingridients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingridients"
        android:textSize="12sp"
        android:layout_below="@id/sp_category"
        android:layout_centerHorizontal="true"/>

    <!-- ListView za sastojke -->
    <ListView
        android:id="@+id/lv_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX=".5"
        android:scaleY=".5"
        android:layout_below="@id/tv_ingridients" />


    <!-- kalorije -->
    <TextView
        android:id="@+id/tv_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie"
        android:textSize="12sp"
        android:layout_below="@id/lv_list_view"
        android:layout_centerHorizontal="true"/>

    <!-- kalorije opis -->
    <TextView
        android:id="@+id/tv_calorie_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14sp"
        android:textSize="11sp"
        android:textStyle="italic"
        android:layout_below="@id/tv_calorie"
        android:layout_centerHorizontal="true"/>


    <!-- #5 cena i dugme za naručivanje   -->
    <!-- cena -->
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"/>

    <!-- $ -->
    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_toRightOf="@id/tv_price"
        android:layout_alignParentBottom="true"/>


    <!-- dugme za narucivanje -->
    <Button
        android:id="@+id/bt_button_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_order"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>